# weather_forecast_bot

./: .gitignore  Dockerfile  README.md  coordinates_db.py  docker-compose.production.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml
src/: config.py  coordinates_db.py  exceptions.py  main.py
src/cache/: redis_cache.py
src/db/: config.py  database.py  models.py
src/db/query/: orm.py
