[project]
name = "weather-forecast-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "dotenv>=0.9.9",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pydantic-settings>=2.10.1",
    "python-telegram-bot>=22.1",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.41",
]
